# graphColoring

./: .gitignore  CMakeLists.txt
src/: Benchmark.h  BenchmarkUtils.h  MatrixIO.h  main.cpp
src/algorithms/: DSaturBnB.h  DSaturColoring.cpp  DSaturColoring.h  GeneticColoring.cpp  GeneticColoring.h  GreedyColoring.cpp  GreedyColoring.h  GreedyHeuristicsColoring.h  MISBacktracking.h
src/method/: GPair.h  Graph.cpp  Graph.h  OlemskoyColorGraph.cpp  OlemskoyColorGraph.h  Utils.cpp  Utils.h
src/olemskoyAlgorithm/: DSet.cpp  DSet.h  Graph.cpp  Graph.h  OlemskoyColorGraph.cpp  OlemskoyColorGraph.h  Pair.h  Utils.cpp  Utils.h  Variants.cpp  Variants.h
